# historiador-docs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.rust  README.md  docker-compose.prod.yml  docker-compose.yml  openapi.yaml  package.json  pnpm-lock.yaml  turbo.json
.cargo/: audit.toml
.claude/: settings.json
.github/workflows/: ci.yml  voice-eval.yml
apps/api/: Cargo.toml
apps/api/examples/: seed_chunks.rs
apps/api/src/: app.rs  crypto.rs  error.rs  health.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs  util.rs
apps/api/src/admin/: analytics.rs  mod.rs  users.rs  workspace.rs
apps/api/src/application/: error.rs  mod.rs
apps/api/src/application/admin/: deactivate_user.rs  get_analytics.rs  get_workspace.rs  invite_user.rs  list_users.rs  log_mcp_query.rs  mod.rs  regenerate_token.rs  reindex_workspace.rs  update_llm_config.rs
apps/api/src/application/auth/: activate.rs  login.rs  logout.rs  mod.rs  refresh.rs  tokens.rs
apps/api/src/application/collections/: commands.rs  create_collection.rs  delete_collection.rs  list_collections.rs  mod.rs  update_collection.rs
apps/api/src/application/editor/: autonomy.rs  block_ops.rs  channels.rs  comments.rs  context.rs  conversation.rs  generate_draft.rs  intake.rs  iterate_draft.rs  mod.rs  outline.rs  prompt_template.rs  prompts.rs  readiness.rs  share.rs  summary.rs
apps/api/src/application/export/: export_page.rs  export_workspace.rs  mod.rs
apps/api/src/application/pages/: create_page.rs  draft_page.rs  get_page.rs  list_pages.rs  mod.rs  page_versions.rs  publish_page.rs  search_pages.rs  update_page.rs  version_history.rs  view.rs
apps/api/src/application/setup/: bcp47.rs  defaults.rs  initialize_installation.rs  list_ollama_models.rs  mod.rs  probe_llm.rs
apps/api/src/auth/: extractor.rs  handlers.rs  jwt.rs  mod.rs  rbac.rs  tokens.rs
apps/api/src/collections/: handlers.rs
apps/api/src/domain/: error.rs  mod.rs
apps/api/src/domain/entity/: chunk.rs  collection.rs  editor_conversation.rs  installation.rs  mod.rs  page.rs  page_version.rs  session.rs  user.rs  version_history.rs  workspace.rs
apps/api/src/domain/port/: chunk_pipeline.rs  cipher.rs  clock.rs  collection_repository.rs  editor_conversation_repository.rs  event_producer.rs  export_repository.rs  id_generator.rs  installation_repository.rs  llm_probe.rs  mod.rs  page_repository.rs  query_analytics.rs  session_repository.rs  token_issuer.rs  user_repository.rs  version_history_repository.rs  workspace_repository.rs
apps/api/src/domain/value/: actor.rs  email.rs  language.rs  mod.rs  page_status.rs  role.rs  slug.rs
apps/api/src/editor/: handlers.rs  mod.rs
apps/api/src/export/: handlers.rs  mod.rs
apps/api/src/infrastructure/: mod.rs  prompts.rs
apps/api/src/infrastructure/auth/: mod.rs
apps/api/src/infrastructure/chronik/: analytics.rs  event_producer.rs  mod.rs
apps/api/src/infrastructure/chunker/: mod.rs  pipeline.rs
apps/api/src/infrastructure/config/: mod.rs
apps/api/src/infrastructure/crypto/: aes_gcm_cipher.rs  mod.rs
apps/api/src/infrastructure/llm/: mod.rs  probe.rs
apps/api/src/infrastructure/persistence/: mod.rs
apps/api/src/infrastructure/persistence/postgres/: collection_repository.rs  editor_conversation_repository.rs  export_repository.rs  installation_repository.rs  mapper.rs  mod.rs  page_repository.rs  session_repository.rs  user_repository.rs  version_history_repository.rs  workspace_repository.rs
apps/api/src/infrastructure/system/: clock.rs  id_generator.rs  mod.rs
apps/api/src/infrastructure/telemetry/: editor.rs  mod.rs
apps/api/src/infrastructure/token/: jwt_issuer.rs  mod.rs
apps/api/src/middleware/: mod.rs  setup_gate.rs
apps/api/src/pages/: handlers.rs  mod.rs  pipeline.rs
apps/api/src/presentation/: mod.rs  openapi.rs  state.rs
apps/api/src/presentation/dto/: mod.rs
apps/api/src/presentation/extractor/: auth_user.rs  mod.rs
apps/api/src/presentation/handler/: auth.rs  collections.rs  editor.rs  editor_ws.rs  export.rs  mod.rs  pages.rs  setup.rs
apps/api/src/presentation/handler/admin/: analytics.rs  mod.rs  users.rs  workspace.rs
apps/api/src/presentation/middleware/: mod.rs  setup_gate.rs
apps/api/src/setup/: handler.rs  llm_probe.rs  mod.rs
apps/api/tests/: sprint2_e2e.rs  sprint3_e2e.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: auth.rs  health.rs  jsonrpc.rs  main.rs  query.rs  state.rs
apps/mcp/src/application/: error.rs  mod.rs  port.rs  search_chunks.rs
apps/mcp/src/infrastructure/: mod.rs  postgres_readonly.rs
apps/web/: Dockerfile  next.config.ts  package.json
artifacts/adr/: ADR-001-vector-database.md  ADR-002-chunking-strategy.md  ADR-003-mcp-server-architecture.md  ADR-004-application-stack.md  ADR-005-multilingual-architecture.md  ADR-006-application-stack-rust.md  ADR-007-chronik-stream.md  ADR-008-split-pane-editor.md  ADR-009-editor-transport-v1.md  ADR-009-websocket-transport-reaffirm.md  ADR-010-canvas-block-tree.md  ADR-011-llm-tool-calling.md  ADR-012-editor-message-envelope.md  ADR-013-proposal-overlay.md  ADR-014-autonomy-modes.md  ADR-015-outline-event.md  (+1 more)
crates/blocks/: Cargo.toml
crates/blocks/src/: lib.rs  parse.rs  serialize.rs
crates/blocks/tests/: roundtrip_proptest.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial_schema.sql  0002_auth_and_setup.sql  0003_version_history.sql  0004_split_llm_model_columns.sql  0005_editor_conversations.sql  0006_autonomy_mode.sql  0007_page_views.sql
crates/db/src/: lib.rs  password.rs  postgres.rs  vector_store.rs
crates/db/src/chronik/: analytics.rs  mod.rs  producer.rs  search.rs
crates/db/src/postgres/: chunks.rs  collections.rs  editor_conversations.rs  installation.rs  mcp_queries.rs  page_version_history.rs  page_versions.rs  pages.rs  sessions.rs  users.rs  workspaces.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  lib.rs  ollama.rs  openai.rs  stub.rs  text_generation.rs  tool_calling.rs
docs/: alpha-validation.md  ollama-setup.md  performance.md  security.md
(+132 files in other folders)
