[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/mcp",
    "crates/chunker",
    "crates/db",
    "crates/llm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.82"

[workspace.dependencies]
# --- async runtime ---
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# --- web framework ---
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# --- http client ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# --- database ---
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
] }

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- error handling ---
anyhow = "1"
thiserror = "1"

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- openapi (stretch #7) ---
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "yaml"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# --- markdown (Sprint 2 chunker) ---
comrak = "0.29"

# --- export (Sprint 8 markdown zip) ---
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }

# --- misc ---
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# --- llm providers (Sprint 4) ---
async-openai = "0.27"

# --- auth & setup (Sprint 2) ---
argon2 = "0.5"
jsonwebtoken = "9"
validator = { version = "0.20", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
