[package]
name = "historiador_api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "gen-openapi"
path = "src/bin/gen-openapi.rs"

# Sprint 10 item #7 — seed 10k synthetic chunks for the MCP load test.
[[bin]]
name = "load-test-seed"
path = "src/bin/load_test_seed.rs"

# Sprint 11 phase A2 — one-shot backfill of block-ID comments into
# existing page_versions.content_markdown rows. Idempotent.
[[bin]]
name = "backfill-block-ids"
path = "src/bin/backfill_block_ids.rs"

[dependencies]
historiador_db = { path = "../../crates/db" }
historiador_chunker = { path = "../../crates/chunker" }
historiador_llm = { path = "../../crates/llm" }
historiador_tools = { path = "../../crates/tools" }
historiador_blocks = { path = "../../crates/blocks" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# --- auth & setup (Sprint 2) ---
argon2.workspace = true
jsonwebtoken.workspace = true
validator.workspace = true
axum-extra.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
sha2.workspace = true
regex.workspace = true
reqwest.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
async-stream.workspace = true
tokio-util.workspace = true
async_zip.workspace = true
