[package]
name = "historiador_mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mcp"
path = "src/main.rs"

[dependencies]
historiador_db = { path = "../../crates/db" }
historiador_llm = { path = "../../crates/llm" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
uuid.workspace = true
sha2.workspace = true
subtle.workspace = true
sqlx.workspace = true
reqwest.workspace = true
chrono.workspace = true
