[package]
name = "historiador_llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
historiador_tools = { path = "../tools" }

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
async-openai.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
futures.workspace = true
async-stream.workspace = true

[features]
ollama-tests = []
